# sokonanoda

./: .gitignore  Cargo.toml  README.md
examples/: arena_poc.rs
src/: conv.rs  debug_printer.rs  env.rs  eval.rs  expr.rs  inductive.rs  level.rs  lib.rs  main.rs  parser.rs  pretty_printer.rs  quot.rs  tc.rs  util.rs  value.rs
src/tests/: level.rs  natlit.rs  util.rs
test_resources/LevelIndexOutOfOrder/: config.json
test_resources/SparseNameIndex/: config.json
tests/: arena.rs
