
[package]
name = "nanoda_lib"
version = "0.4.10-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ammkrn/nanoda_lib"
description = "A type checker for the Lean 4 programming language and theorem prover"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level=3
overflow-checks=true
lto=true

[profile.test]
opt-level=3
overflow-checks=true

[dev-dependencies]
rand = "0.8.5"
num-bigint = { version = "0.4.4", features = ["rand", "serde"] }
stumpalo = "0.5.1"

[dependencies]
indexmap = "2.13.0"
rustc-hash = "1.1.0"
num-bigint = { version = "0.4.4", features = ["serde"] }
num-integer = "0.1.46"
num-traits = "0.2.17"
semver = "1.0.27"
serde_json = "1.0.111"
serde = { version = "1.0.228", features = ["derive"] }
stumpalo = "0.5.1"
hashbrown = "0.17.1"

[features]
# Encode the local/global interning-pointer tag in the pointer's *top* byte and
# dereference without masking, relying on the AArch64 Top-Byte-Ignore (TBI)
# hardware feature (the MMU ignores the top byte of a virtual address on data
# accesses). This removes the masking `AND` from every pointer dereference.
#
# Only sound on aarch64 with TBI enabled for userspace (the default on Linux);
# enabling it elsewhere is a hard compile error. Off by default — the portable
# build tags the low bit and masks on deref.
top-byte-ignore = []

[[bin]]
name = "nanoda_bin"
path = "src/main.rs"
bench = false
